# CMakeList.txt : CMake project for CmakeNatvis, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CmakeNatvis "CmakeNatvis.cpp" "CmakeNatvis.h")

# TODO: Add tests and install targets if needed.
